[package]
name = "duplex"
version = "0.2.0"
description = "The Duplex trait: interactive streams"
authors = ["Dan Gohman <dev@sunfishcode.online>"]
edition = "2018"
license = "Apache-2.0 WITH LLVM-exception OR Apache-2.0 OR MIT"
keywords = ["io"]
categories = ["rust-patterns"]
repository = "https://github.com/sunfishcode/duplex"
readme = "README.md"

[dependencies]
char-device = { version = "0.2.0", optional = true }
duplexify = { version = "1.2.2", optional = true }
futures-io = { version = "0.3.12", optional = true }
tokio = { version = "1.1.0", optional = true }
readwrite = { version = "0.1.2", optional = true }
# When enabling serialport, see [here] for information on build dependencies.
# [here]: https://gitlab.com/susurrus/serialport-rs#dependencies
serialport = { version = "4.0.0", optional = true }
ssh2 = { version = "0.9.0", optional = true }
socketpair = { version = "0.5.0", optional = true }

[badges]
maintenance = { status = "actively-developed" }
