[package]
name = "duplex"
version = "0.9.1-alpha.0"
description = "The Duplex trait: interactive streams"
authors = ["Dan Gohman <dev@sunfishcode.online>"]
edition = "2018"
license = "Apache-2.0 WITH LLVM-exception OR Apache-2.0 OR MIT"
keywords = ["io"]
categories = ["rust-patterns"]
repository = "https://github.com/sunfishcode/duplex"
exclude = ["/.github"]

[dependencies]
char-device = { version = "0.9.0", optional = true }
duplexify = { version = "1.2.2", optional = true }
futures-io = { version = "0.3.12", optional = true }
tokio = { version = "1.8.1", optional = true }
readwrite = { version = "0.2.0", optional = true }
# When enabling serialport, see [here] for information on build dependencies.
# [here]: https://gitlab.com/susurrus/serialport-rs#dependencies
serialport = { version = "4.0.1", optional = true }
ssh2 = { version = "0.9.1", optional = true }
socketpair = { version = "0.12.0", optional = true }

[features]
default = []
use_async_std_char_device = ["futures-io", "char-device/use_async_std"]
use_async_std_socketpair = ["futures-io", "socketpair/use_async_std"]
use_tokio_char_device = ["char-device/use_tokio"]
use_tokio_socketpair = ["socketpair/use_tokio"]

[package.metadata.docs.rs]
all-features = true
